tests/passing/array_decl.db
const const scores = [3, 2, 5]!